--- a/app/app.yaml
+++ b/app/app.yaml
@@ -1,1 +1,11 @@
-runtime: nodejs20
+runtime: nodejs
+env: flex
+
+instance_class: B1
+
+runtime_config:
+  operating_system: "ubuntu22"
+  runtime_version: "20"
+
+manual_scaling:
+  instances: 1
