--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "yarn": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.9.0",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "discord.js": "^14.14.1",
