--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.9.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "discord.js": "^14.14.1",
