--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "yarn": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "@google-cloud/aiplatform": "^3.20.0",
     "@google/generative-ai": "^0.9.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
