--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "cron": "^3.1.7",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
