--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@google-cloud/aiplatform": "^3.20.0",
+    "@google-cloud/vertexai": "^1.2.0",
     "@google/generative-ai": "^0.9.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
