--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.1.1",
     "google-auth-library": "^9.9.0"
   },
   "devDependencies": {
