--- a/app/src/config/defaultConfig.json
+++ b/app/src/config/defaultConfig.json
@@ -1,4 +1,5 @@
 {
   "guildEmojis": {},
-  "guildMembers": {}
+  "guildMembers": {},
+  "checkInLeaderboard": "📢 Báo Cáo Điểm Danh {date} 📢\n\nTổng Số Lượt Điểm Danh: **{totalCheckIns}**\n\n👑 Quán Quân Điểm Danh 👑\n\nMột tràng pháo tay thật lớn dành cho {topCheckInUser} với tổng số {topCheckInCount} điểm danh trong tháng!\n\nTiếp tục phát huy nhé mọi người! Hãy cùng nhau nâng cao số ngày và số lượt điểm danh nào! 🚀\n\n🏆 Bảng Xếp Hạng 🏆\n\n{counts}"
 }
