--- a/app/package.json
+++ b/app/package.json
@@ -8,9 +8,11 @@
     "clean": "rimraf build",
     "prebuild": "yarn clean",
     "build": "tsc",
-    "watch": "tsc -w",
     "lint": "eslint src",
+    "debug": "nodemon --inspect src/main.ts",
     "dev": "nodemon src/main.ts",
+    "preprod": "yarn build",
+    "prod": "NODE_ENV=production node build/src/main.js",
     "start": "node build/src/main.js",
     "docker-build": "docker-compose build",
     "docker-dev": "docker-compose -f compose.yaml -f compose.development.yaml up -d",
