--- a/app/package.json
+++ b/app/package.json
@@ -5,21 +5,22 @@
   "author": "Hung Nguyen",
   "license": "ISC",
   "scripts": {
-    "clean": "rimraf build",
-    "prebuild": "yarn clean",
+    "clean": "rm -rf build",
+    "prebuild": "pnpm clean",
     "build": "tsc",
     "lint": "eslint src",
     "debug": "nodemon --inspect src/main.ts",
     "dev": "nodemon src/main.ts",
     "start": "NODE_ENV=production node build/src/main.js",
-    "docker-build": "docker-compose build",
-    "docker-dev": "docker-compose -f compose.yaml -f compose.development.yaml up -d",
-    "docker-prod": "docker-compose -f compose.yaml -f compose.production.yaml up -d"
+    "docker-build": "docker compose build",
+    "docker-dev": "docker compose -f compose.yaml -f compose.development.yaml up -d",
+    "docker-prod": "docker compose -f compose.yaml -f compose.production.yaml up -d"
   },
   "engines": {
-    "node": "20",
+    "node": "22",
     "yarn": ">=1.0.0 <2.0.0"
   },
+  "packageManager": "pnpm@10.11.0",
   "dependencies": {
     "@google-cloud/aiplatform": "^3.20.0",
     "@google-cloud/vertexai": "^1.2.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "@typescript-eslint/parser": "^7.7.1",
