--- a/app/.env.example
+++ b/app/.env.example
@@ -1,7 +1,10 @@
 CLIENT_ID=
-TOKEN=
+
 SLEEP_REMINDER_SERVER_ID=
 AI_API_KEY=
 ALLOWED_SERVERS=
 FREE_CHANNELS=
 BEARER_TOKEN=
+
+TOKEN=
+POLICE_BOT_TOKEN=
