--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "@google/generative-ai": "^0.9.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "axios-cache-interceptor": "^1.8.0",
     "body-parser": "^1.20.2",
     "cron": "^3.1.7",
     "discord.js": "^14.14.1",
