--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,7 +5,7 @@
 ARG NODE_VERSION=22
 
 ################################################################################
-FROM node:${NODE_VERSION}-slim as base
+FROM node:${NODE_VERSION} AS base
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
@@ -14,15 +14,17 @@ RUN corepack enable
 COPY . /app
 WORKDIR /app
 
-
 FROM base AS prod-deps
+
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --frozen-lockfile
 
 FROM base AS build
+
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 RUN pnpm run build
 
 FROM base
+
 COPY --from=prod-deps /app/node_modules /app/node_modules
 COPY --from=build /app/build /app/build
 EXPOSE 3001
